image-content/helloweb/XXXX/hello-web/templates/deployment.yaml
---
# Source: hello-web/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-hello-web
  labels:
    helm.sh/chart: hello-web-1.0.0
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-web
      app.kubernetes.io/instance: test
  template:
    metadata:
      labels:
        helm.sh/chart: hello-web-1.0.0
        app.kubernetes.io/name: hello-web
        app.kubernetes.io/instance: test
        app.kubernetes.io/version: "1.1.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: test-hello-web
      securityContext:
        {}
      containers:
        - name: hello-web
          securityContext:
            {}
          image: "ksrinimba/hello-web:1.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
