image-content/helloweb/XXXX/hello-web/templates/service.yaml
---
# Source: hello-web/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-hello-web
  labels:
    helm.sh/chart: hello-web-1.0.0
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: test
