image-content/helloweb/XXXX/hello-web/templates/ingress.yaml
---
# Source: hello-web/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-hello-web
  labels:
    helm.sh/chart: hello-web-1.0.0
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "hello.ryzon7-isd40.opsmx.org"
      secretName: chart-example-tls
  rules:
    - host: "hello.ryzon7-isd40.opsmx.org"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-hello-web
                port:
                  number: 8000
